@@ -3,7 +3,7 @@ package br.com.api.mgdexpress.MGD.EXPRESS.controller;
 import br.com.api.mgdexpress.MGD.EXPRESS.model.historico.*;
 import br.com.api.mgdexpress.MGD.EXPRESS.model.historico.motoboy.DadosHistoricoMotoboy;
 import br.com.api.mgdexpress.MGD.EXPRESS.repository.HistoricoRepository;
-import br.com.api.mgdexpress.MGD.EXPRESS.service.MesUtil;
+
 import br.com.api.mgdexpress.MGD.EXPRESS.service.TokenService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
@@ -13,16 +13,23 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
 
+import java.math.BigDecimal;
 import java.time.Month;
-import java.time.format.DateTimeFormatter;
-import java.time.format.TextStyle;
-import java.util.*;
-
+import java.util.ArrayList;
+import java.util.Comparator;
+import java.util.List;
+import java.util.Map;
+import java.util.concurrent.atomic.AtomicReference;
 import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/historico")
 public class HistoricoController {
+
+    List<ListaDeMesHistorico> listaDeMesHistoricos = new ArrayList<>();
+    List<DadosHistoricoListMotoboy> listaMotoboys = new ArrayList<>();
+    float totalRecebido =0.0f;
+    Month ultimoMes;
 
     @Autowired
     private HistoricoRepository historicoRepository;
@@ -33,14 +40,14 @@ public class HistoricoController {
     @PreAuthorize("hasRole('ROLE_USER_MOTOBOY')")
     @GetMapping("/motoboy")
     public ResponseEntity<List<AnoComMesesHistorico>> buscarPeloIdMotoboy(@RequestHeader("Authorization") String header) {
-        var token = header.replace("Bearer ", "");
+        var token = header.replace("Bearer ","");
         var id = tokenService.getId(token);
 
         // Busca os históricos do motoboy
         List<DadosHistoricoListMotoboy> historicos = historicoRepository.BuscarMotoboy(id)
                 .stream()
                 .map(DadosHistoricoListMotoboy::new)
-                .toList();
+                .collect(Collectors.toList());
 
         // Agrupa os históricos por ano e mês
         Map<Integer, Map<Month, List<DadosHistoricoListMotoboy>>> historicosAgrupadosPorAnoEMes = historicos.stream()
@@ -53,12 +60,9 @@ public class HistoricoController {
         List<AnoComMesesHistorico> anosComMesesHistoricos = historicosAgrupadosPorAnoEMes.entrySet().stream()
                 .map(entryAno -> {
                     List<MesComHistorico> mesesComHistoricos = entryAno.getValue().entrySet().stream()
-                            .map(entryMes -> {
-                                Month mes = entryMes.getKey();
-                                String nomeMes = MesUtil.obterNomeMes(mes);
-                                double somaValores = entryMes.getValue().stream().mapToDouble(h -> h.valor().doubleValue()).sum();
-                                return new MesComHistorico(nomeMes, somaValores, entryMes.getValue());
-                            })
+                            .map(entryMes -> new MesComHistorico(entryMes.getKey(),
+                                    entryMes.getValue().stream().mapToDouble(h -> h.valor().doubleValue()).sum(),
+                                    entryMes.getValue()))
                             .sorted(Comparator.comparing(MesComHistorico::mes))
                             .collect(Collectors.toList());
 
@@ -67,9 +71,7 @@ public class HistoricoController {
                 .sorted(Comparator.comparing(AnoComMesesHistorico::ano))
                 .collect(Collectors.toList());
 
-
         return ResponseEntity.ok(anosComMesesHistoricos);
-
     }
 
 
@@ -78,7 +80,7 @@ public class HistoricoController {
     public ResponseEntity<DadosHistoricoMotoboy> buscarPeloIdPedido(@PathVariable Long idpedido,@RequestHeader("Authorization") String header){
         var token = header.replace("Bearer ","");
         var id = tokenService.getId(token);
-        System.out.println(idpedido);
+
         var pedido = new DadosHistoricoMotoboy(historicoRepository.BuscarProIdPedido(idpedido,id));
         return ResponseEntity.ok(pedido);
     }
@@ -100,10 +102,6 @@ public class HistoricoController {
     public ResponseEntity<Page<DadosHistoricoLista>> Listar(@PageableDefault(size = 10)Pageable pageable){
         var historicos = historicoRepository.findAll(pageable).map(DadosHistoricoLista::new);
         return ResponseEntity.ok(historicos);
-    }
-
-    public static String obterNomeMes(Month month) {
-        return month.getDisplayName(TextStyle.FULL, new Locale("pt", "BR"));
     }
 
 
